setting using color

--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -1,6 +1,12 @@
-$colorMain : red;
-$colorSub  : blue;
-$colorThird: green;
+$bgColorMain : #ff8a00;
+$bgColorSub  : #ffb800;
+$bgColorThird: #fff;
+$bgColorFourth: #E9DBB5;
+$bgColorFifth: #F5F5F5;
+$bgColorEntryForm: #F6F3EC;
 
+$colorMain: #333;
+$colorSub: #fff;
+$colorThird: #ff8a00;
 
 $maxWidthContainer: 1000px;
