--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #test {
   color: #333;
 }
@@ -12,17 +13,46 @@
   }
 }
 
+p, h1, h2, h3, h4, h5, h6, a, span {
+  font-family: Noto Sans JP;
+}
+
 .container {
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.sitelogo {
+  display: flex;
+}
+.sitelogo__txt {
+  color: #ff8a00;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  line-height: normal;
+  margin-left: 11px;
+}
+.sitelogo__txt h1 {
+  font-size: 14px; /*IE9以前に対応する*/
+  font-size: 0.875rem;
+}
+.sitelogo__txt h2 {
+  font-size: 10px; /*IE9以前に対応する*/
+  font-size: 0.625rem;
+}
+
+.header__container {
+  padding: 12px 18px;
+}
+
 #hamburgerBtn {
   position: fixed;
   z-index: 9999;
-  top: 10px;
-  right: 10px;
+  top: 9px;
+  right: 9px;
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -32,19 +62,19 @@
   transition: all 0.4s;
   position: absolute;
   left: 14px;
-  height: 3px;
+  height: 1px;
   border-radius: 2px;
-  background-color: #666;
-  width: 45%;
+  background-color: #333;
+  width: 20px;
 }
 #hamburgerBtn span:nth-of-type(1) {
   top: 15px;
 }
 #hamburgerBtn span:nth-of-type(2) {
-  top: 23px;
+  top: 21px;
 }
 #hamburgerBtn span:nth-of-type(3) {
-  top: 31px;
+  top: 27px;
 }
 #hamburgerBtn.active span:nth-of-type(1) {
   top: 18px;
