--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -16,22 +16,52 @@
 // --------------------------------------------
 // 共通
 // --------------------------------------------
+p, h1, h2, h3, h4, h5, h6, a, span {
+    font-family: Noto Sans JP;
+}
+
 .container {
     max-width: $maxWidthContainer;
     margin-left: auto;
     margin-right: auto;
 }
 
+.sitelogo {
+    display: flex;
+
+    &__txt {
+        color: $colorThird;
+        font-weight: $fontWeightBold;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        line-height: normal;
+        margin-left: 11px;
+
+        & h1 {
+            @include rem(14);
+        }
+        & h2 {
+            @include rem(10);
+        }
+    }
+}
+
 
 // --------------------------------------------
 // ヘッダー
 // --------------------------------------------
+.header {
+    &__container {
+        padding: 12px 18px;
+    }
+}
 // ハンバーガーボタン
 #hamburgerBtn{
 	position:fixed;
     z-index: 9999;
-	top:10px;
-	right: 10px;
+	top: 9px;
+	right: 9px;
 	cursor: pointer;
     width: 50px;
     height:50px;
@@ -41,19 +71,19 @@
         transition: all .4s;
         position: absolute;
         left: 14px;
-        height: 3px;
+        height: 1px;
         border-radius: 2px;
-        background-color: #666;
-        width: 45%;   
+        background-color: $colorMain;
+        width: 20px;   
         
         &:nth-of-type(1) {
             top:15px;	
         }
         &:nth-of-type(2) {
-            top:23px;
+            top:21px;
         }
         &:nth-of-type(3) {
-            top:31px;
+            top:27px;
         }
     }
 
@@ -77,6 +107,7 @@
         }
     }
 }
+
 
 // ハンバーガーメニュー
 #hamburgerMenu {
@@ -120,7 +151,7 @@
         text-align: center; 
 
         & a {
-            color: #333;
+            color: $colorMain;
 	        text-decoration: none;
 	        padding:10px;
 	        display: block;
