--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
 #test {
   color: #333;
 }
@@ -45,6 +53,7 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 }
 
 .header {
+  background-color: #fff;
   height: 60px;
 }
 @media screen and (min-width: 1024px) {
@@ -65,14 +74,6 @@ p, h1, h2, h3, h4, h5, h6, a, span {
   animation: slideDown 0.3s ease-in-out;
 }
 
-@keyframes slideDown {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
 #hamburgerBtn {
   position: fixed;
   z-index: 9999;
