--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,6 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 }
 
 .header {
-  background-color: #fff;
   height: 60px;
 }
 @media screen and (min-width: 1024px) {
@@ -64,6 +63,23 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 .header__container {
   padding: 12px 18px;
 }
+@media screen and (min-width: 1024px) {
+  .header__container {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .header__ttl {
+    display: flex;
+    align-items: center;
+  }
+}
+.header__nav {
+  width: 80%;
+}
 .header--sticky {
   position: fixed;
   top: 0;
@@ -72,6 +88,26 @@ p, h1, h2, h3, h4, h5, h6, a, span {
   opacity: 1;
   visibility: visible;
   animation: slideDown 0.3s ease-in-out;
+  background-color: #fff;
+}
+
+.globalMenu {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .globalMenu {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 100%;
+  }
+}
+.globalMenuList {
+  display: flex;
+  align-items: center;
+}
+.globalMenuList__item {
+  margin-left: 30px;
 }
 
 #hamburgerBtn {
@@ -82,6 +118,11 @@ p, h1, h2, h3, h4, h5, h6, a, span {
   cursor: pointer;
   width: 50px;
   height: 50px;
+}
+@media screen and (min-width: 1024px) {
+  #hamburgerBtn {
+    display: none;
+  }
 }
 #hamburgerBtn span {
   display: inline-block;
@@ -128,6 +169,11 @@ p, h1, h2, h3, h4, h5, h6, a, span {
   height: 100vh;
   transition: all 0.3s;
   background-color: #fff;
+}
+@media screen and (min-width: 1024px) {
+  #hamburgerMenu {
+    display: none;
+  }
 }
 #hamburgerMenu.panelactive {
   opacity: 1;
