ヘッダーHTML改修

--- a/assets/css/modules/_keyframes.scss
+++ b/assets/css/modules/_keyframes.scss
@@ -6,3 +6,13 @@
         transform: translateY(0%);
     }
 }
+
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(-100%);
+    }
+}
