--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -12,6 +12,7 @@ $colorThird: #ff8a00;
 $fontWeightBold: 700;
 
 $maxWidthContainer: 1000px;
+$maxWidthHeaderContainerPc: 1440px;
 
 $heightHeaderSp: 60px;
 $heightHeaderPc: 100px;
