--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -53,120 +53,89 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 // ヘッダー
 // --------------------------------------------
 .header {
-    // background-color: $bgColorThird;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
     height: $heightHeaderSp;
+    background: $bgColorThird;
+    // box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     @include pc {
         height: $heightHeaderPc;
     }
 
     &__container {
-        padding: 12px 18px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 20px 0 18px;
+
         @include pc {
-            display: flex;
-            align-content: center;
-            justify-content: space-between;
             height: 100%;
         }
-    }
 
-    &__ttl {
-        @include pc {
-            display: flex;
-            align-items: center;
-        }
-    }
-
-    &__nav {
-        width: 80%;
-    }
-
-    &--sticky {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        opacity: 1;
-        visibility: visible;
-        animation: slideDown 0.3s ease-in-out;
-        background-color: $bgColorThird;
-    }
-}
-
-// グローバルメニュー
-.globalMenu {
-    display: none;
-    @include pc {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        height: 100%;
-    }
-
-    &List {
-        display: flex;
-        align-items: center;
-
-        &__item {
-            margin-left: 30px;
+        &.container {
+            max-width: $maxWidthHeaderContainerPc;
         }
     }
 }
 
 // ハンバーガーボタン
-#hamburgerBtn{
-	position:fixed;
+.hamburger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: $heightHeaderSp;
+    border: 0;
+    cursor: pointer;
     z-index: 9999;
-	top: 9px;
-	right: 9px;
-	cursor: pointer;
-    width: 50px;
-    height:50px;
+    // background: green;
     @include pc {
         display: none;
     }
 
-    & span {
-        display: inline-block;
-        transition: all .4s;
-        position: absolute;
-        left: 14px;
+    &__line {
+        position: relative;
+        width: 20px;
         height: 1px;
-        border-radius: 2px;
         background-color: $colorMain;
-        width: 20px;   
         
-        &:nth-of-type(1) {
-            top:15px;	
+        &::before, &::after {
+            position: absolute;
+            content: "";
+            display: block;
+            height: 1px;
+            background-color: $colorMain;
+            width: 20px;   
+            transition: transform 0.3s;
         }
-        &:nth-of-type(2) {
-            top:21px;
+
+        &::before {
+            top: -8px;
         }
-        &:nth-of-type(3) {
-            top:27px;
+
+        &::after {
+            bottom: -8px;
         }
     }
 
     &.active {
-        & span {
-            &:nth-of-type(1) {
-                top: 18px;
-                left: 18px;
-                transform: translateY(6px) rotate(-45deg);
-                width: 30%;
+        & .hamburger__line {
+            background: transparent;
+
+            &::before {
+                top: 0;
+                transform: rotate(45deg);
             }
-            &:nth-of-type(2) {
-                opacity: 0;
-            }
-            &:nth-of-type(3){
-                top: 30px;
-                left: 18px;
-                transform: translateY(-6px) rotate(45deg);
-                width: 30%;
+
+            &::after {
+                bottom: 0;
+                transform: rotate(-45deg);
             }
         }
     }
 }
-
 
 // ハンバーガーメニュー
 #hamburgerMenu {
@@ -214,9 +183,10 @@ p, h1, h2, h3, h4, h5, h6, a, span {
     & li {
         list-style: none;
         text-align: center; 
-        margin-bottom: 30px;
-        &:nth-child(4) {
-            margin-bottom: 10px;
+        margin: 30px 0;
+        &:nth-child(4),
+        &:nth-child(5) {
+            margin: 10px 0;
         }
 
         & a:not(.btn) {
@@ -228,6 +198,39 @@ p, h1, h2, h3, h4, h5, h6, a, span {
         }
     }
 }
+
+// ハンバーガーメニュー共通
+.noScroll {
+    overflow: hidden;
+}
+
+
+// グローバルメニュー
+.globalMenu {
+    display: none;
+    @include pc {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+    }
+
+    &List {
+        display: flex;
+        align-items: center;
+
+        &__item {
+            &:nth-child(2),
+            &:nth-child(3),
+            &:nth-child(4) {
+                margin-left: 29px;
+            }
+            &:nth-child(5) {
+                margin-left: 12px;
+            }
+        }
+    }
+}  
 
 // ボタン共通
 .btn {
@@ -247,3 +250,21 @@ p, h1, h2, h3, h4, h5, h6, a, span {
         padding: 16px 36px 15px 39px;
     }
 }
+
+
+// --------------------------------------------
+// メインコンテンツ
+// --------------------------------------------
+main {
+    & .container {
+        padding: calc($heightHeaderSp + 0px ) 0 30px;
+        @include pc {
+            padding: calc($heightHeaderPc + 0px ) 0 30px;
+        }    
+    }
+}
+
+
+// --------------------------------------------
+// フッター
+// --------------------------------------------
