--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -62,6 +62,9 @@ p, h1, h2, h3, h4, h5, h6, a, span {
     // box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     @include pc {
         height: $heightHeaderPc;
+        position: absolute;
+        width: 100%;
+        background: none;
     }
 
     &__container {
@@ -80,122 +83,140 @@ p, h1, h2, h3, h4, h5, h6, a, span {
     }
 }
 
-// ハンバーガーボタン
-.hamburger {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20px;
+#fixedHeader {
+    position: fixed;
+    top: calc(-1 * $heightHeaderSp);
+    width: 100%;
     height: $heightHeaderSp;
-    border: 0;
-    cursor: pointer;
-    z-index: 9999;
-    // background: green;
+    transition: .5s;
+    background: $bgColorThird;
     @include pc {
-        display: none;
+        top: calc(-1 * $heightHeaderPc);
+        height: $heightHeaderPc;
     }
 
-    &__line {
-        position: relative;
-        width: 20px;
-        height: 1px;
-        background-color: $colorMain;
-        
-        &::before, &::after {
-            position: absolute;
-            content: "";
-            display: block;
-            height: 1px;
-            background-color: $colorMain;
-            width: 20px;   
-            transition: transform 0.3s;
-        }
-
-        &::before {
-            top: -8px;
-        }
-
-        &::after {
-            bottom: -8px;
-        }
-    }
-
-    &.active {
-        & .hamburger__line {
-            background: transparent;
-
-            &::before {
-                top: 0;
-                transform: rotate(45deg);
-            }
-
-            &::after {
-                bottom: 0;
-                transform: rotate(-45deg);
-            }
-        }
+    &.is-show {
+        top: 0;
     }
 }
 
-// ハンバーガーメニュー
-#hamburgerMenu {
-    position:fixed;
-	z-index: -1;
-	opacity: 0;
-    top:0;
-    right: 0;
-	width:100%;
-    height: 100vh;
-    transition: all 0.3s;
-    background-color: $bgColorThird;
-    @include pc {
-        display: none;
+// ハンバーガーボタン
+.hamburger {
+    &__btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 20px;
+        height: $heightHeaderSp;
+        border: 0;
+        cursor: pointer;
+        z-index: 9999;
+        @include pc {
+            display: none;
+        }
+    
+        &--line {
+            position: relative;
+            width: 20px;
+            height: 1px;
+            background-color: $colorMain;
+            
+            &::before, &::after {
+                position: absolute;
+                content: "";
+                display: block;
+                height: 1px;
+                background-color: $colorMain;
+                width: 20px;   
+                transition: transform 0.3s;
+            }
+    
+            &::before {
+                top: -8px;
+            }
+    
+            &::after {
+                bottom: -8px;
+            }
+        }
+    
+        &.active {
+            & .hamburger__btn--line {
+                background: transparent;
+    
+                &::before {
+                    top: 0;
+                    transform: rotate(45deg);
+                }
+    
+                &::after {
+                    bottom: 0;
+                    transform: rotate(-45deg);
+                }
+            }
+        }    
     }
 
-    &.panelactive{
-        opacity: 1;
-        z-index:999;
-
-        & #hamburgerMenuList {
-            position: fixed;
-            z-index: 999;
-            width: 100%;
-            height: 100vh;
-            overflow: auto;
-            -webkit-overflow-scrolling: touch;
+    &__menu {
+        position:fixed;
+        z-index: -1;
+        opacity: 0;
+        top:0;
+        right: 0;
+        width:100%;
+        height: 100vh;
+        transition: all 0.3s;
+        background-color: $bgColorThird;
+        @include pc {
+            display: none;
         }
 
+        &.panelactive{
+            opacity: 1;
+            z-index:999;
+    
+            & #hamburgerMenuList {
+                position: fixed;
+                z-index: 999;
+                width: 100%;
+                height: 100vh;
+                overflow: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+    
+            & ul {
+                display: block;
+            }
+        }
+    
         & ul {
-            display: block;
+            display: none;
+            position: absolute;
+            z-index: 999;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+            width: 100%;
         }
-    }
-
-    & ul {
-        display: none;
-        position: absolute;
-        z-index: 999;
-        top:50%;
-        left:50%;
-        transform: translate(-50%,-50%);
-        width: 100%;
-    }
-
-    & li {
-        list-style: none;
-        text-align: center; 
-        margin: 30px 0;
-        &:nth-child(4),
-        &:nth-child(5) {
-            margin: 10px 0;
+    
+        & li {
+            list-style: none;
+            text-align: center; 
+            margin: 30px 0;
+            &:nth-child(4),
+            &:nth-child(5) {
+                margin: 10px 0;
+            }
+    
+            & a:not(.btn) {
+                color: $colorMain;
+                text-decoration: none;
+                display: block;
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+            }
         }
-
-        & a:not(.btn) {
-            color: $colorMain;
-	        text-decoration: none;
-	        display: block;
-	        text-transform: uppercase;
-	        letter-spacing: 0.1em;
-        }
+    
     }
 }
 
@@ -203,7 +224,6 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 .noScroll {
     overflow: hidden;
 }
-
 
 // グローバルメニュー
 .globalMenu {
@@ -257,9 +277,9 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 // --------------------------------------------
 main {
     & .container {
-        padding: calc($heightHeaderSp + 0px ) 0 30px;
+        // padding: calc($heightHeaderSp + 0px ) 0 30px;
         @include pc {
-            padding: calc($heightHeaderPc + 0px ) 0 30px;
+            // padding: calc($heightHeaderPc + 0px ) 0 30px;
         }    
     }
 }
