--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,23 @@ p, h1, h2, h3, h4, h5, h6, a, span {
   font-size: 0.625rem;
 }
 
+.isSp {
+  display: block;
+}
+@media screen and (min-width: 1024px) {
+  .isSp {
+    display: none;
+  }
+}
+.isPc {
+  display: none;
+}
+@media screen and (min-width: 1024px) {
+  .isPc {
+    display: block;
+  }
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -98,6 +115,7 @@ p, h1, h2, h3, h4, h5, h6, a, span {
   height: 60px;
   transition: 0.5s;
   background: #fff;
+  z-index: 1;
 }
 @media screen and (min-width: 1024px) {
   #fixedHeader {
@@ -252,4 +270,101 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 .btn__secondary {
   background-color: #ffb800;
   padding: 16px 36px 15px 39px;
+}
+
+.firstVisual {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-top: 60px;
+  margin-bottom: 50px;
+  position: relative;
+}
+@media screen and (min-width: 768px) {
+  .firstVisual {
+    margin-top: 100px;
+    margin-bottom: 120px;
+  }
+}
+.firstVisual__bg {
+  position: absolute;
+  z-index: -1;
+  margin-top: -60px;
+  margin-right: 15px;
+  width: 316px;
+  height: 522px;
+  top: 145px;
+  color: #fff;
+  background: linear-gradient(180deg, #ff8a00 0%, #ffb800 99.98%);
+}
+@media screen and (min-width: 768px) {
+  .firstVisual__bg {
+    margin-top: -114px;
+    margin-right: 0;
+    width: 67.3%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .firstVisual__bg {
+    top: 220px;
+    height: 100%;
+  }
+}
+.firstVisual__ttl {
+  position: relative;
+  font-size: 48px;
+  font-weight: normal;
+  line-height: 1.2;
+}
+@media screen and (min-width: 768px) {
+  .firstVisual__ttl {
+    font-size: 48px;
+  }
+}
+.firstVisual__ttl br {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .firstVisual__ttl br {
+    display: none;
+  }
+}
+.firstVisual__ttl::after {
+  content: "";
+  display: block;
+  margin: 15px 0 15px -35px;
+  border-top: 1px solid currentColor;
+}
+@media screen and (min-width: 768px) {
+  .firstVisual__ttl::after {
+    margin-left: -35px;
+  }
+}
+.firstVisual__txt {
+  line-height: 2;
+}
+.firstVisual__ph {
+  margin-left: 60px;
+}
+@media screen and (min-width: 768px) {
+  .firstVisual__ph {
+    margin-left: 15%;
+  }
+}
+.firstVisual__ph img {
+  width: 100%;
+}
+.firstVisual__caption {
+  position: absolute;
+  bottom: 26px;
+  left: 3%;
+}
+@media screen and (min-width: 768px) {
+  .firstVisual__caption {
+    left: 5%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .firstVisual__caption {
+    left: 10%;
+  }
 }/*# sourceMappingURL=styles.css.map */
