--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -48,6 +48,22 @@ p, h1, h2, h3, h4, h5, h6, a, span {
     }
 }
 
+.is {
+    &Sp {
+        display: block;
+        @include pc {
+            display: none;
+        }
+    }
+
+    &Pc {
+        display: none;
+        @include pc {
+            display: block;
+        }
+    }
+}
+
 
 // --------------------------------------------
 // ヘッダー
@@ -90,6 +106,7 @@ p, h1, h2, h3, h4, h5, h6, a, span {
     height: $heightHeaderSp;
     transition: .5s;
     background: $bgColorThird;
+    z-index: 1;
     @include pc {
         top: calc(-1 * $heightHeaderPc);
         height: $heightHeaderPc;
@@ -268,6 +285,95 @@ p, h1, h2, h3, h4, h5, h6, a, span {
     &__secondary {
         background-color: $bgColorSub;
         padding: 16px 36px 15px 39px;
+    }
+}
+
+
+// --------------------------------------------
+// メインビジュアル
+// --------------------------------------------
+.firstVisual {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 60px;
+    margin-bottom: 50px;
+    position: relative;
+    @include tab {
+        margin-top: 100px;
+        margin-bottom: 120px;
+    }
+
+    &__bg {
+        position: absolute;
+        z-index: -1;
+        margin-top: -60px;
+        margin-right: 15px;
+        width: 316px;
+        height: 522px;
+        top: calc($heightHeaderSp + 85px);
+        color: #fff;
+        background: linear-gradient(180deg, $bgColorMain 0%, $bgColorSub 99.98%);
+        @include tab {
+            margin-top: -114px;
+            margin-right: 0;
+            width: 67.3%;
+        }
+        @include pc {
+            top: calc($heightHeaderPc + 120px);
+            height: 100%;
+        }
+    }
+
+    &__ttl {
+        position: relative;
+        font-size: 48px;
+        font-weight: normal;
+        line-height: 1.2;
+        @include tab {
+            font-size: 48px;
+        }
+
+        & br {
+            display: block;
+            @include tab {
+                display: none;
+            }
+        }
+        &::after {
+            content: "";
+            display: block;
+            margin: 15px 0 15px -35px;
+            border-top: 1px solid currentColor;
+            @include tab {
+                margin-left: -35px;
+            }
+        }
+    }
+
+    &__txt {
+        line-height: 2;
+    }
+
+    &__ph {
+        margin-left: 60px;
+        @include tab {
+            margin-left: 15%;
+        }
+        & img {
+            width: 100%;
+        }
+    }
+
+    &__caption {
+        position: absolute;
+        bottom: 26px;
+        left: 3%;
+        @include tab {
+            left: 5%;
+        }
+        @include pc {
+            left: 10%;
+        }
     }
 }
 
