mission and vission 作成

--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -11,7 +11,8 @@ $colorThird: #ff8a00;
 
 $fontWeightBold: 700;
 
-$maxWidthContainer: 1000px;
+$maxWidthContainer: 90%;
+$maxWidthContainerPc: 1000px;
 $maxWidthHeaderContainerPc: 1440px;
 
 $heightHeaderSp: 60px;
