社長メッセージ

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -457,6 +457,9 @@ main {
 #CeoMessage {
   padding-top: 80px;
 }
+#CeoMessage .section__ttl {
+  margin-bottom: 69px;
+}
 #CeoMessage .section__container {
   background: url(/assets/image/seo-message-sp.png) no-repeat 100% top;
   position: relative;
